--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,10 +155,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\ClassificationEffect.cpp" />
     <ClCompile Include="source\CrystarRoof.cpp" />
     <ClCompile Include="source\AnimationItem.cpp" />
     <ClCompile Include="source\AnimationManager.cpp" />
     <ClCompile Include="source\BoardPolygon.cpp" />
+    <ClCompile Include="source\EffekseerBase.cpp" />
+    <ClCompile Include="source\EffekseerPosSynchro.cpp" />
     <ClCompile Include="source\FrameData.cpp" />
     <ClCompile Include="source\MotionList.cpp" />
     <ClCompile Include="source\ModeInstructions.cpp" />
@@ -194,10 +197,13 @@
     <ClCompile Include="source\UIHeart.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\ClassificationEffect.h" />
     <ClInclude Include="source\CrystarRoof.h" />
     <ClInclude Include="source\AnimationItem.h" />
     <ClInclude Include="source\AnimationManager.h" />
     <ClInclude Include="source\BoardPolygon.h" />
+    <ClInclude Include="source\EffekseerBase.h" />
+    <ClInclude Include="source\EffekseerPosSynchro.h" />
     <ClInclude Include="source\FrameData.h" />
     <ClInclude Include="source\MotionList.h" />
     <ClInclude Include="source\ModeInstructions.h" />
