BoardPolygonDustの途中段階をコミット
内容
BoardPolygonに基底クラスPlaneEffectBaseクラスを追加
PlaneEffectBaseを基底クラスとしBoardPolygonDustを作成
基準点から各方向10こビルボードが出るクラス

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -46,6 +46,8 @@
     <ClCompile Include="source\UISuppressionGauge.cpp" />
     <ClCompile Include="source\TimeLimit.cpp" />
     <ClCompile Include="source\UITimeLimit.cpp" />
+    <ClCompile Include="source\BoardPolygonDust.cpp" />
+    <ClCompile Include="source\PlaneEffectBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -94,5 +96,7 @@
     <ClInclude Include="source\UISuppressionGauge.h" />
     <ClInclude Include="source\TimeLimit.h" />
     <ClInclude Include="source\UITimeLimit.h" />
+    <ClInclude Include="source\BoardPolygonDust.h" />
+    <ClInclude Include="source\PlaneEffectBase.h" />
   </ItemGroup>
 </Project>
