--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\PlaneEffectBase.cpp" />
+    <ClCompile Include="source\BoardPolygonDust.cpp" />
     <ClCompile Include="source\CrystarPattern1.cpp" />
     <ClCompile Include="source\CrystarPattern2.cpp" />
     <ClCompile Include="source\ClassificationEffect.cpp" />
@@ -202,6 +204,8 @@
     <ClCompile Include="source\UITimeLimit.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\PlaneEffectBase.h" />
+    <ClInclude Include="source\BoardPolygonDust.h" />
     <ClInclude Include="source\CrystarPattern1.h" />
     <ClInclude Include="source\CrystarPattern2.h" />
     <ClInclude Include="source\ClassificationEffect.h" />
