Bossクラスの作成

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClCompile Include="source\UISuppressionGauge.cpp" />
     <ClCompile Include="source\TimeLimit.cpp" />
     <ClCompile Include="source\UITimeLimit.cpp" />
+    <ClCompile Include="source\Boss.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -94,5 +95,6 @@
     <ClInclude Include="source\UISuppressionGauge.h" />
     <ClInclude Include="source\TimeLimit.h" />
     <ClInclude Include="source\UITimeLimit.h" />
+    <ClInclude Include="source\Boss.h" />
   </ItemGroup>
 </Project>
