--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\Boss.cpp" />
     <ClCompile Include="source\CrystarPattern1.cpp" />
     <ClCompile Include="source\CrystarPattern2.cpp" />
     <ClCompile Include="source\ClassificationEffect.cpp" />
@@ -202,6 +203,7 @@
     <ClCompile Include="source\UITimeLimit.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Boss.h" />
     <ClInclude Include="source\CrystarPattern1.h" />
     <ClInclude Include="source\CrystarPattern2.h" />
     <ClInclude Include="source\ClassificationEffect.h" />
