PlaneEffectManegerをEffectManegerクラスに昇格し EffectBaseクラスからBoardPollygonクラスとEffeckseerクラスを継承クラスに変更

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -48,6 +48,7 @@
     <ClCompile Include="source\UITimeLimit.cpp" />
     <ClCompile Include="source\BoardPolygonDust.cpp" />
     <ClCompile Include="source\PlaneEffectBase.cpp" />
+    <ClCompile Include="source\EffectBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -98,5 +99,6 @@
     <ClInclude Include="source\UITimeLimit.h" />
     <ClInclude Include="source\BoardPolygonDust.h" />
     <ClInclude Include="source\PlaneEffectBase.h" />
+    <ClInclude Include="source\EffectBase.h" />
   </ItemGroup>
 </Project>
