--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -49,6 +49,7 @@
     <ClCompile Include="source\PlaneEffectBase.cpp" />
     <ClCompile Include="source\EffectBase.cpp" />
     <ClCompile Include="source\EffectManeger.cpp" />
+    <ClCompile Include="source\Suppression.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -100,5 +101,6 @@
     <ClInclude Include="source\PlaneEffectBase.h" />
     <ClInclude Include="source\EffectBase.h" />
     <ClInclude Include="source\EffectManeger.h" />
+    <ClInclude Include="source\Suppression.h" />
   </ItemGroup>
 </Project>
