--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -49,6 +49,7 @@
     <ClCompile Include="source\Boss.cpp" />
     <ClCompile Include="source\BoardPolygonDust.cpp" />
     <ClCompile Include="source\PlaneEffectBase.cpp" />
+    <ClCompile Include="source\BossIronBall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -100,5 +101,6 @@
     <ClInclude Include="source\Boss.h" />
     <ClInclude Include="source\BoardPolygonDust.h" />
     <ClInclude Include="source\PlaneEffectBase.h" />
+    <ClInclude Include="source\BossIronBall.h" />
   </ItemGroup>
 </Project>
