制圧値が2割以下になったときゲートを作成する関数を追加
内容
Gateクラスを作成
ビルボードで表示し触れたらフェードインをするように作成
当たり判定まで作成

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -50,6 +50,7 @@
     <ClCompile Include="source\EffectBase.cpp" />
     <ClCompile Include="source\EffectManeger.cpp" />
     <ClCompile Include="source\Suppression.cpp" />
+    <ClCompile Include="source\Gate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -102,5 +103,6 @@
     <ClInclude Include="source\EffectBase.h" />
     <ClInclude Include="source\EffectManeger.h" />
     <ClInclude Include="source\Suppression.h" />
+    <ClInclude Include="source\Gate.h" />
   </ItemGroup>
 </Project>
