--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -51,6 +51,7 @@
     <ClCompile Include="source\EffectManeger.cpp" />
     <ClCompile Include="source\Suppression.cpp" />
     <ClCompile Include="source\Gate.cpp" />
+    <ClCompile Include="source\ModeFade.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -104,5 +105,6 @@
     <ClInclude Include="source\EffectManeger.h" />
     <ClInclude Include="source\Suppression.h" />
     <ClInclude Include="source\Gate.h" />
+    <ClInclude Include="source\ModeFade.h" />
   </ItemGroup>
 </Project>
