Lightクラスを作成

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="source\EffectBase.cpp" />
     <ClCompile Include="source\EffectManeger.cpp" />
     <ClCompile Include="source\Suppression.cpp" />
+    <ClCompile Include="source\Light.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -106,5 +107,6 @@
     <ClInclude Include="source\EffectBase.h" />
     <ClInclude Include="source\EffectManeger.h" />
     <ClInclude Include="source\Suppression.h" />
+    <ClInclude Include="source\Light.h" />
   </ItemGroup>
 </Project>
