--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\Light.cpp" />
     <ClCompile Include="source\ModeScenario.cpp" />
     <ClCompile Include="source\EffectBase.cpp" />
     <ClCompile Include="source\EffectManeger.cpp" />
@@ -208,6 +209,7 @@
     <ClCompile Include="source\Suppression.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Light.h" />
     <ClInclude Include="source\ModeScenario.h" />
     <ClInclude Include="source\EffectBase.h" />
     <ClInclude Include="source\EffectManeger.h" />
