ステージの読み込みの作成　その他修正
内容
ステージ読み込み時に読み込むオブジェクトの名前を検索する関数を追加。
そこからオブジェクトを生成するように修正
ステージ読み込み時の仮のローディング画面を作成
ステージごとに読み込むファイルが違うので使用するオブジェクトの名前を検索するためのファイルを追加
ResourceServerにModelハンドル用のdelete関数を作成
エネミーを削除するときにデストラクタでエラーが発生したので修正

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\ModeLoading.cpp" />
     <ClCompile Include="source\ModeFade.cpp" />
     <ClCompile Include="source\Gate.cpp" />
     <ClCompile Include="source\Light.cpp" />
@@ -211,6 +212,7 @@
     <ClCompile Include="source\Suppression.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\ModeLoading.h" />
     <ClInclude Include="source\ModeFade.h" />
     <ClInclude Include="source\Gate.h" />
     <ClInclude Include="source\Light.h" />
