--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\RotationCamera.cpp" />
+    <ClCompile Include="source\CameraBase.cpp" />
     <ClCompile Include="source\Light.cpp" />
     <ClCompile Include="source\ModeScenario.cpp" />
     <ClCompile Include="source\EffectBase.cpp" />
@@ -207,8 +209,11 @@
     <ClCompile Include="source\TimeLimit.cpp" />
     <ClCompile Include="source\UITimeLimit.cpp" />
     <ClCompile Include="source\Suppression.cpp" />
+    <ClCompile Include="source\TargetZoomCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\RotationCamera.h" />
+    <ClInclude Include="source\CameraBase.h" />
     <ClInclude Include="source\Light.h" />
     <ClInclude Include="source\ModeScenario.h" />
     <ClInclude Include="source\EffectBase.h" />
@@ -262,6 +267,7 @@
     <ClInclude Include="source\TimeLimit.h" />
     <ClInclude Include="source\UITimeLimit.h" />
     <ClInclude Include="source\Suppression.h" />
+    <ClInclude Include="source\TargetZoomCamera.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
