--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -142,9 +142,6 @@
     <ClCompile Include="source\ModelColor.cpp">
       <Filter>Character</Filter>
     </ClCompile>
-    <ClCompile Include="source\Camera.cpp">
-      <Filter>Mode\Game</Filter>
-    </ClCompile>
     <ClCompile Include="source\Light.cpp">
       <Filter>Mode\Game</Filter>
     </ClCompile>
@@ -156,6 +153,18 @@
     </ClCompile>
     <ClCompile Include="source\ModeGame.cpp">
       <Filter>Mode\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Camera.cpp">
+      <Filter>Mode\Game\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="source\CameraBase.cpp">
+      <Filter>Mode\Game\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="source\TargetZoomCamera.cpp">
+      <Filter>Mode\Game\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RotationCamera.cpp">
+      <Filter>Mode\Game\Camera</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -303,9 +312,6 @@
     <ClInclude Include="source\ModelColor.h">
       <Filter>Character</Filter>
     </ClInclude>
-    <ClInclude Include="source\Camera.h">
-      <Filter>Mode\Game</Filter>
-    </ClInclude>
     <ClInclude Include="source\Light.h">
       <Filter>Mode\Game</Filter>
     </ClInclude>
@@ -317,6 +323,18 @@
     </ClInclude>
     <ClInclude Include="source\ModeGame.h">
       <Filter>Mode\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Camera.h">
+      <Filter>Mode\Game\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="source\CameraBase.h">
+      <Filter>Mode\Game\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="source\TargetZoomCamera.h">
+      <Filter>Mode\Game\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="source\RotationCamera.h">
+      <Filter>Mode\Game\Camera</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -361,6 +379,9 @@
     </Filter>
     <Filter Include="Mode\Game">
       <UniqueIdentifier>{83bca989-3fef-431d-bc70-e6602cf6729d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Mode\Game\Camera">
+      <UniqueIdentifier>{c21e23ff-301b-485c-9e90-a2e1a65088a4}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
