エフェクシアに引数に回転処理が増えたものを追加

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,10 +155,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\EffekseerRotation.cpp" />
     <ClCompile Include="source\EffectBase.cpp" />
     <ClCompile Include="source\Light.cpp" />
     <ClCompile Include="source\ModeScenario.cpp" />
-    <ClCompile Include="source\EffectBase.cpp" />
     <ClCompile Include="source\EffectManeger.cpp" />
     <ClCompile Include="source\Boss.cpp" />
     <ClCompile Include="source\PlaneEffectBase.cpp" />
@@ -210,10 +210,10 @@
     <ClCompile Include="source\Suppression.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\EffekseerRotation.h" />
     <ClInclude Include="source\EffectBase.h" />
     <ClInclude Include="source\Light.h" />
     <ClInclude Include="source\ModeScenario.h" />
-    <ClInclude Include="source\EffectBase.h" />
     <ClInclude Include="source\EffectManeger.h" />
     <ClInclude Include="source\Boss.h" />
     <ClInclude Include="source\PlaneEffectBase.h" />
