タイルクラスを作成
内容
タイルの読み込み用関数とタイルの読み込む名前を取得する関数を作成
読み込み時にコンテナに中身があったら削除するよう関数を作成
コンテナに入っている数だけタイルを描画するように設計

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\Floor.cpp" />
     <ClCompile Include="source\ModeLoading.cpp" />
     <ClCompile Include="source\ModeFade.cpp" />
     <ClCompile Include="source\Gate.cpp" />
@@ -213,6 +214,7 @@
     <ClCompile Include="source\UnbreakableObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Floor.h" />
     <ClInclude Include="source\ModeLoading.h" />
     <ClInclude Include="source\ModeFade.h" />
     <ClInclude Include="source\Gate.h" />
