--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -56,6 +56,7 @@
     <ClCompile Include="source\Floor.cpp">
       <Filter>Building</Filter>
     </ClCompile>
+    <ClCompile Include="source\LoadPlayerChara.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -271,6 +272,7 @@
     <ClInclude Include="source\Floor.h">
       <Filter>Building</Filter>
     </ClInclude>
+    <ClInclude Include="source\LoadPlayerChara.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
