--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -158,6 +158,9 @@
       <Filter>Mode\Game</Filter>
     </ClCompile>
     <ClCompile Include="source\UnbreakableObject.cpp" />
+    <ClCompile Include="source\CollisionManager.cpp">
+      <Filter>Mode\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
@@ -321,6 +324,9 @@
     </ClInclude>
     <ClInclude Include="source\UnbreakableObject.h">
       <Filter>Building</Filter>
+    </ClInclude>
+    <ClInclude Include="source\CollisionManager.h">
+      <Filter>Mode\Game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
