--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\Heart.cpp" />
     <ClCompile Include="source\Floor.cpp" />
     <ClCompile Include="source\ModeLoading.cpp" />
     <ClCompile Include="source\ModeFade.cpp" />
@@ -214,6 +215,7 @@
     <ClCompile Include="source\UnbreakableObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Heart.h" />
     <ClInclude Include="source\Floor.h" />
     <ClInclude Include="source\ModeLoading.h" />
     <ClInclude Include="source\ModeFade.h" />
