--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="source\Floor.cpp">
       <Filter>Building</Filter>
     </ClCompile>
+    <ClCompile Include="source\Heart.cpp">
+      <Filter>Character</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -270,6 +273,9 @@
     <ClInclude Include="source\ModeLoading.h" />
     <ClInclude Include="source\Floor.h">
       <Filter>Building</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Heart.h">
+      <Filter>Character</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
