--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,7 +155,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="source\LoadPlayerChara.cpp" />
+    <ClCompile Include="source\LoadingChain.cpp" />
+    <ClCompile Include="source\LoadingPlayer.cpp" />
     <ClCompile Include="source\Floor.cpp" />
     <ClCompile Include="source\ModeLoading.cpp" />
     <ClCompile Include="source\ModeFade.cpp" />
@@ -215,7 +216,8 @@
     <ClCompile Include="source\UnbreakableObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\LoadPlayerChara.h" />
+    <ClInclude Include="source\LoadingChain.h" />
+    <ClInclude Include="source\LoadingPlayer.h" />
     <ClInclude Include="source\Floor.h" />
     <ClInclude Include="source\ModeLoading.h" />
     <ClInclude Include="source\ModeFade.h" />
