ObjectBaseクラス：メンバ変数にCellインスタンスを追加。（CollisionManagerでの当たり判定管理に用いる。）

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -57,8 +57,9 @@
       <Filter>Building</Filter>
     </ClCompile>
     <ClCompile Include="source\CollisionManager.cpp">
-      <Filter>Mode\Game</Filter>
+      <Filter>Mode\Game\CollisionManager</Filter>
     </ClCompile>
+    <ClCompile Include="source\ObjectBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -275,6 +276,12 @@
       <Filter>Building</Filter>
     </ClInclude>
     <ClInclude Include="source\ObjectBase.h" />
+    <ClInclude Include="source\CollisionManager.h">
+      <Filter>Mode\Game\CollisionManager</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Cell.h">
+      <Filter>Mode\Game\CollisionManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
@@ -439,9 +446,6 @@
     <ClInclude Include="source\UnbreakableObject.h">
       <Filter>Building</Filter>
     </ClInclude>
-    <ClInclude Include="source\CollisionManager.h">
-      <Filter>Mode\Game</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Character">
@@ -485,6 +489,9 @@
     </Filter>
     <Filter Include="Mode\Game">
       <UniqueIdentifier>{83bca989-3fef-431d-bc70-e6602cf6729d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Mode\Game\CollisionManager">
+      <UniqueIdentifier>{9085406b-b4fa-43a0-89f1-31d0c0cc0085}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
