--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="source\EffectBase.cpp" />
     <ClCompile Include="source\EffectManeger.cpp" />
     <ClCompile Include="source\Boss.cpp" />
+    <ClCompile Include="source\ObjectBase.cpp" />
     <ClCompile Include="source\PlaneEffectBase.cpp" />
     <ClCompile Include="source\BoardPolygonDust.cpp" />
     <ClCompile Include="source\CrystarPattern1.cpp" />
@@ -215,6 +216,7 @@
     <ClCompile Include="source\UnbreakableObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Cell.h" />
     <ClInclude Include="source\CollisionManager.h" />
     <ClInclude Include="source\Floor.h" />
     <ClInclude Include="source\ModeLoading.h" />
