--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -209,7 +209,7 @@
     <ClCompile Include="source\ModeTest.cpp" />
     <ClCompile Include="source\ModeTitle.cpp" />
     <ClCompile Include="source\Player.cpp" />
-    <ClCompile Include="source\Chain.cpp" />
+    <ClCompile Include="source\IronBall.cpp" />
     <ClCompile Include="source\ScreenVibration.cpp" />
     <ClCompile Include="source\SlaBlock.cpp" />
     <ClCompile Include="source\Tower.cpp" />
@@ -283,7 +283,7 @@
     <ClInclude Include="source\ModeTest.h" />
     <ClInclude Include="source\ModeTitle.h" />
     <ClInclude Include="source\Player.h" />
-    <ClInclude Include="source\Chain.h" />
+    <ClInclude Include="source\IronBall.h" />
     <ClInclude Include="source\ScreenVibration.h" />
     <ClInclude Include="source\SlaBlock.h" />
     <ClInclude Include="source\Tower.h" />
