--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\ModeBossBattle.cpp" />
     <ClCompile Include="source\ModeTutorial.cpp" />
     <ClCompile Include="source\ModeZoomCamera.cpp" />
     <ClCompile Include="source\ModeRotationCamera.cpp" />
@@ -229,6 +230,7 @@
     <ClCompile Include="source\TargetZoomCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\ModeBossBattle.h" />
     <ClInclude Include="source\ModeTutorial.h" />
     <ClInclude Include="source\ModeZoomCamera.h" />
     <ClInclude Include="source\ModeRotationCamera.h" />
