ムービーを追加し、ゲームループができるよう追加
内容
ModeMovieを作成　クレジットを再生します。
StageNumが4の時エンディングに飛ぶよう作成

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -82,6 +82,7 @@
     <ClCompile Include="source\ModeZoomCamera.cpp" />
     <ClCompile Include="source\ModeTutorial.cpp" />
     <ClCompile Include="source\Fog.cpp" />
+    <ClCompile Include="source\ModeMovie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\RotationCamera.h" />
@@ -317,6 +318,7 @@
     </ClInclude>
     <ClInclude Include="source\ModeTutorial.h" />
     <ClInclude Include="source\Fog.h" />
+    <ClInclude Include="source\ModeMovie.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
