--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\AnimationChain.cpp" />
     <ClCompile Include="source\ModeMovie.cpp" />
     <ClCompile Include="source\Fog.cpp" />
     <ClCompile Include="source\ModeBossBattle.cpp" />
@@ -232,6 +233,7 @@
     <ClCompile Include="source\TargetZoomCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\AnimationChain.h" />
     <ClInclude Include="source\ModeMovie.h" />
     <ClInclude Include="source\Fog.h" />
     <ClInclude Include="source\ModeBossBattle.h" />
