--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -91,6 +91,7 @@
     <ClCompile Include="source\EffectManeger.cpp" />
     <ClCompile Include="source\Suppression.cpp" />
     <ClCompile Include="source\ModeBossBattle.cpp" />
+    <ClCompile Include="source\AnimationChain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\IronBall.cpp" />
@@ -395,6 +396,7 @@
     <ClInclude Include="source\ModeBossBattle.h">
       <Filter>Mode</Filter>
     </ClInclude>
+    <ClInclude Include="source\AnimationChain.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
