方向ベクトルの方向に矢印を出すポリゴンクラスを作成

--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -93,6 +93,7 @@
     <ClCompile Include="source\ModeBossBattle.cpp" />
     <ClCompile Include="source\AnimationChain.cpp" />
     <ClCompile Include="source\UIBossHp.cpp" />
+    <ClCompile Include="source\BoardParabola.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\IronBall.cpp" />
@@ -399,6 +400,7 @@
     </ClInclude>
     <ClInclude Include="source\AnimationChain.h" />
     <ClInclude Include="source\UIBossHp.h" />
+    <ClInclude Include="source\BoardParabola.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
