Afterglowクラスを追加
内容
鉄球が攻撃時に目の残光を発生させるためのクラスです。
引数としてモデルとモデルの取りたい位置のフレーム番号、残光を残すときの縦の長さ、画像ハンドル、表示する最大フレーム数です。
とりあえず今は赤色で固定になっています。

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\Afterglow.cpp" />
     <ClCompile Include="source\BoardParabola.cpp" />
     <ClCompile Include="source\AnimationChain.cpp" />
     <ClCompile Include="source\ModeMovie.cpp" />
@@ -235,6 +236,7 @@
     <ClCompile Include="source\UIBossHp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Afterglow.h" />
     <ClInclude Include="source\BoardParabola.h" />
     <ClInclude Include="source\AnimationChain.h" />
     <ClInclude Include="source\ModeMovie.h" />
