--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -94,6 +94,7 @@
     <ClCompile Include="source\AnimationChain.cpp" />
     <ClCompile Include="source\UIBossHp.cpp" />
     <ClCompile Include="source\BoardParabola.cpp" />
+    <ClCompile Include="source\Afterglow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\IronBall.cpp" />
@@ -401,6 +402,7 @@
     <ClInclude Include="source\AnimationChain.h" />
     <ClInclude Include="source\UIBossHp.h" />
     <ClInclude Include="source\BoardParabola.h" />
+    <ClInclude Include="source\Afterglow.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
