--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -39,10 +39,8 @@
     <ClCompile Include="source\SlaBlockPattern2.cpp" />
     <ClCompile Include="source\CrystarPattern4.cpp" />
     <ClCompile Include="source\EnemyPool.cpp" />
-    <ClCompile Include="source\BreakableBuilding.cpp" />
     <ClCompile Include="source\myJson.cpp" />
     <ClCompile Include="source\bone.cpp" />
-    <ClCompile Include="source\BreakModelParts.cpp" />
     <ClCompile Include="source\BuildingBase.cpp" />
     <ClCompile Include="source\CharacterBase.cpp" />
     <ClCompile Include="source\CrystarPattern3.cpp" />
@@ -59,7 +57,6 @@
     <ClCompile Include="source\UIBase.cpp" />
     <ClCompile Include="source\UIExpPoint.cpp" />
     <ClCompile Include="source\UIHeart.cpp" />
-    <ClCompile Include="source\House.cpp" />
     <ClCompile Include="source\EnemyPool.cpp" />
     <ClCompile Include="source\CrystarPattern4.cpp" />
     <ClCompile Include="source\SlaBlockPattern2.cpp" />
@@ -96,6 +93,12 @@
     <ClCompile Include="source\BoardParabola.cpp" />
     <ClCompile Include="source\Afterglow.cpp" />
     <ClCompile Include="source\UnbreakableBuilding.cpp">
+      <Filter>Building</Filter>
+    </ClCompile>
+    <ClCompile Include="source\BreakableBuilding.cpp">
+      <Filter>Building</Filter>
+    </ClCompile>
+    <ClCompile Include="source\BreakModelParts.cpp">
       <Filter>Building</Filter>
     </ClCompile>
   </ItemGroup>
@@ -169,10 +172,8 @@
     <ClInclude Include="source\CrystarPattern4.h" />
     <ClInclude Include="source\EnemyPool.h" />
     <ClInclude Include="source\EnemyStract.h" />
-    <ClInclude Include="source\BreakableBuilding.h" />
     <ClInclude Include="source\myJson.h" />
     <ClInclude Include="source\bone.h" />
-    <ClInclude Include="source\BreakModelParts.h" />
     <ClInclude Include="source\BuildingBase.h" />
     <ClInclude Include="source\CharacterBase.h" />
     <ClInclude Include="source\CrystarPattern3.h" />
@@ -189,7 +190,6 @@
     <ClInclude Include="source\UIBase.h" />
     <ClInclude Include="source\UIExpPoint.h" />
     <ClInclude Include="source\UIHeart.h" />
-    <ClInclude Include="source\House.h" />
     <ClInclude Include="source\EnemyStract.h" />
     <ClInclude Include="source\EnemyPool.h" />
     <ClInclude Include="source\CrystarPattern4.h" />
@@ -264,9 +264,6 @@
     </ClCompile>
     <ClCompile Include="source\Player.cpp">
       <Filter>Character\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="source\BreakObject.cpp">
-      <Filter>Building</Filter>
     </ClCompile>
     <ClCompile Include="source\BuildingBase.cpp">
       <Filter>Building</Filter>
@@ -408,6 +405,12 @@
     <ClInclude Include="source\UnbreakableBuilding.h">
       <Filter>Building</Filter>
     </ClInclude>
+    <ClInclude Include="source\BreakableBuilding.h">
+      <Filter>Building</Filter>
+    </ClInclude>
+    <ClInclude Include="source\BreakModelParts.h">
+      <Filter>Building</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\CharacterBase.h">
@@ -445,9 +448,6 @@
     </ClInclude>
     <ClInclude Include="source\Player.h">
       <Filter>Character\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="source\BreakObject.h">
-      <Filter>Building</Filter>
     </ClInclude>
     <ClInclude Include="source\BuildingBase.h">
       <Filter>Building</Filter>
